[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sys-mon"
description = "System monitorng CLI tool"
version = "0.1.0"
dependencies = [
    "rich",
    "psutil",
]
author = [
    { name = "Romy Pine", email = "romypine007@gmail.com" },
]
maintainer = [
    { name = "Romy Pine", email = "romypine007@gmail.com" }
]
license = "MIT"  # people can use the code
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
sys-mon = "sys_mon.main:main"   # this creates the CLI command