[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sys-mon"
description = "System monitorng CLI tool"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "psutil",
    "desktop-notifier",
]
author = [
    { name = "Romy Pine", email = "romypine007@gmail.com" },
]
maintainer = [
    { name = "Romy Pine", email = "romypine007@gmail.com" }
]
license = "MIT"  # people can use the code
license-files = ["LICENSE"]


[project.scripts]
sys-mon = "sys_mon.main:main"   # this creates the CLI command


[project.optional-dependencies]
test = ["pytest"]